--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
   <a href="https://twitter.com/gabehammersmith">him</a>
   .
 </p>
- <script src="Script/main.js"></script>
+ <script src="main.js"></script>
 </body>
 </html>
